<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.partner.PartnerActivity">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/digimonPartnerName"
        android:layout_width="0dp"
        android:layout_height="356dp"
        android:background="@color/partner_bg"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="322dp"
            android:background="@drawable/bginfo"
            android:backgroundTint="@color/white">

            <TextView
                android:id="@+id/PartnerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/partnerName2"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/round_top" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <ImageView
        android:id="@+id/partnerImage"
        android:layout_width="286dp"
        android:layout_height="369dp"
        android:layout_marginTop="155dp"
        android:contentDescription="@string/digimonInfoImage"
        android:src="@drawable/taichi2020"
        app:layout_constraintBottom_toBottomOf="@+id/digimonPartnerName"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/digimonPartnerName" />

    <TextView
        android:id="@+id/partnerDescriptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/digimonInfoDescription"
        android:textColor="@color/text_black_color"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/partnerImage"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/partnerDescriptionText"
        android:text="@string/taichiDescription"
        android:textColor="@color/text_black_color"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/partnerDescriptionTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="gravity"
        android:textStyle="normal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/digimonPartnerTitle"
        android:text="@string/digimonPartnerTitleText"
        android:textColor="@color/text_black_color"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/partnerDescriptionText"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>