<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.digimon.DigimonInfoActivity">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/digimonInfoName"
        android:layout_width="0dp"
        android:layout_height="356dp"
        android:background="@color/digi_info_bg"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
       <androidx.appcompat.widget.LinearLayoutCompat
           android:layout_width="match_parent"
           android:layout_height="322dp"
           android:background="@drawable/bginfo"
           android:backgroundTint="@color/white">
           <TextView
               android:id="@+id/digimonName"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="20dp"
               android:layout_marginTop="20dp"
               android:textAllCaps="true"
               android:layout_marginEnd="20dp"
               android:layout_marginBottom="10dp"
               android:text="@string/digimon_name"
               android:textAlignment="center"
               android:textColor="@color/white"
               android:textSize="35sp"
               android:textStyle="bold" />
       </androidx.appcompat.widget.LinearLayoutCompat>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/round_top"
            >
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <ImageView
        android:id="@+id/digimonImage"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="110dp"
        android:contentDescription="@string/digimonInfoImage"
        android:src="@drawable/gammamon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/digimonInfoName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/digimonDescriptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/digimonInfoDescription"
        android:textColor="@color/text_black_color"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/digimonInfoName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/digimonDescriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/digimonText"
        android:textStyle="normal"
        android:textSize="15sp"
        android:textAlignment="gravity"
        android:textColor="@color/text_black_color"
        app:layout_constraintTop_toBottomOf="@id/digimonDescriptionTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/PartnerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/digipartnerTitle"
        android:textColor="@color/text_black_color"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/digimonDescriptionText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <ImageView
        android:id="@+id/partnerLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/digimonInfoDescription"
        android:background="@drawable/rounder_bg"
        android:backgroundTint="@color/digi_info_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PartnerTitle" />

    <ImageView
        android:id="@+id/partnerIcon"
        android:layout_width="106dp"
        android:layout_height="105dp"
        android:contentDescription="@string/digimonInfoDescription"
        android:src="@drawable/hiroicon"
        app:layout_constraintBottom_toBottomOf="@+id/partnerLayout"
        app:layout_constraintEnd_toEndOf="@+id/partnerLayout"
        app:layout_constraintStart_toEndOf="@+id/partnerName" />

    <TextView
        android:id="@+id/partnerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:text="@string/partnerName"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/partnerLayout"
        app:layout_constraintStart_toStartOf="@+id/partnerLayout"
        app:layout_constraintTop_toTopOf="@+id/partnerLayout"
        app:layout_constraintVertical_bias="0.481" />


    <TextView
        android:id="@+id/digievolutionsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/digievolutions"
        android:textColor="@color/text_black_color"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/partnerLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/digievolutionsList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/digievolutionsTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />




</androidx.constraintlayout.widget.ConstraintLayout>