<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp">

    <ImageView
        android:id="@+id/digievolve_bg"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:contentDescription="@string/digimonInfoImage"
        android:background="@drawable/rounder_bg"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/evolve_card_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466" />

    <ImageView
        android:id="@+id/digimonEvolveIcon"
        android:layout_width="158dp"
        android:layout_height="98dp"
        android:contentDescription="@string/digimonInfoImage"
        android:src="@drawable/gulus"
        app:layout_constraintBottom_toBottomOf="@+id/digievolve_bg"
        app:layout_constraintEnd_toEndOf="@id/digievolve_bg"
        app:layout_constraintStart_toEndOf="@+id/digimonEvolName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/digimonEvolName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/digimonEvolveName"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/digievolve_bg"
        app:layout_constraintStart_toStartOf="@+id/digievolve_bg"
        app:layout_constraintTop_toTopOf="@+id/digievolve_bg" />


    <ImageView
        android:id="@+id/level_evolve_bg"
        android:layout_width="149dp"
        android:layout_height="29dp"
        android:background="@drawable/rounder_bg"
        android:backgroundTint="@color/evolve_level_card_bg"
        app:layout_constraintBottom_toTopOf="@+id/digimonEvolName"
        app:layout_constraintEnd_toStartOf="@+id/digimonEvolveIcon"
        app:layout_constraintStart_toStartOf="@+id/digievolve_bg"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/evolveLevelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/champion"
        android:textColor="@color/text_black_color"
        android:textSize="16sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/level_evolve_bg"
        app:layout_constraintEnd_toEndOf="@+id/level_evolve_bg"
        app:layout_constraintStart_toStartOf="@+id/level_evolve_bg"
        app:layout_constraintTop_toTopOf="@+id/level_evolve_bg" />


</androidx.constraintlayout.widget.ConstraintLayout>